fdo#77340: SwXStyle::setPropertyValue PageNumberOffset, PageDescName

... throw exceptions instead of setting values.

(regression from 6e61ecd09679a66060f932835622821d39e92f01)

Change-Id: Ibe704ebd294724035a87473f51b76421063f25d3